--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           </li>
           <li><a href="#">PROTFOLIO<span>▼</span></a>
             <ul>
-              <li><a href="#">DATA PREPROCESSING</a></li>
-              <li><a href="#">DATA LABELING</a></li>
+              <li><a href="#">PREPROCESSING</a></li>
+              <li><a href="#">LABELING</a></li>
               <li><a href="#">ANALYSIS</a></li>
             </ul>
           </li>
