--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <nav>
         <ul id="topMenu">
-          <li><a href="#">ABOUT</a> <span>▼</span></a>
+          <li><a href="#">ABOUT<span>▼</span></a>
             <ul>
               <li><a href="#">ABOUT US</a></li>
               <li><a href="#">LOCATION</a></li>
