--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div id="company">
-        <p>KNU, Daegu, Republic of Korea (TEL) 053-123-4567</p> 
+        <p>80, Daehak-ro, Buk-gu, Daegu, Republic of Korea (TEL) 053-123-4567</p> 
       </div>     
     </footer>  
   </div> 
