--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </header>
     <div id="slideShow">
       <div id="slides">
-        <img src="images/photo-1.jpg" alt="" width="100%">
-        <img src="images/photo-2.jpg" alt="" width="100%">
-        <img src="images/photo-3.jpg" alt="" width="100%">
+        <img src="images/photo-1.jpg" alt="">
+        <img src="images/photo-2.jpg" alt="">
+        <img src="images/photo-3.jpg" alt="">
         <button id="prev">&lang;</button>
         <button id="next">&rang;</button>
       </div>
@@ -62,12 +62,12 @@
         <div id="gallery" class="tabContent">
           <h2>Gallery.</h2>
           <ul>
-            <li><img src="images/img-1.jpg" width="100%"></li>
-            <li><img src="images/img-2.jpg" width="100%"></li>
-            <li><img src="images/img-3.jpg" width="100%"></li>
-            <li><img src="images/img-1.jpg" width="100%"></li>
-            <li><img src="images/img-2.jpg" width="100%"></li>
-            <li><img src="images/img-3.jpg" width="100%"></li>                     
+            <li><img src="images/img-1.jpg"></li>
+            <li><img src="images/img-2.jpg"></li>
+            <li><img src="images/img-3.jpg"></li>
+            <li><img src="images/img-1.jpg"></li>
+            <li><img src="images/img-2.jpg"></li>
+            <li><img src="images/img-3.jpg"></li>                     
           </ul>
         </div>        
       </div>
