--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <div id="gallery" class="tabContent">
           <h2>Gallery.</h2>
           <ul>
-            <li><img src="images/img-1.jpg"></li>
-            <li><img src="images/img-2.jpg"></li>
-            <li><img src="images/img-3.jpg"></li>
-            <li><img src="images/img-1.jpg"></li>
-            <li><img src="images/img-2.jpg"></li>
-            <li><img src="images/img-3.jpg"></li>                     
+            <li><img src="images/img-1.jpg" width="150px"></li>
+            <li><img src="images/img-2.jpg" width="150px"></li>
+            <li><img src="images/img-3.jpg" width="150px"></li>
+            <li><img src="images/img-1.jpg" width="150px"></li>
+            <li><img src="images/img-2.jpg" width="150px"></li>
+            <li><img src="images/img-3.jpg" width="150px"></li>                     
           </ul>
         </div>        
       </div>
