--- a/index.html
+++ b/index.html
@@ -53,21 +53,23 @@
           <h2>Announcement Board.</h2>
           <ul>            
             <li>Data Structure List</li>
-            <li>About Service Price</li>
-            <li>Server Shutdown due to Updating Process</li>
-            <li>Server List</li>
+            <li>Server list and Service Prices</li>
+            <li>[IMPORTANT] Server Stop due to Updating Process</li>
             <li>Welcome to DATA ABC</li>            
           </ul>
         </div>
         <div id="gallery" class="tabContent">
           <h2>Gallery.</h2>
           <ul>
-            <li><img src="images/img-1.jpg" width="150px"></li>
-            <li><img src="images/img-2.jpg" width="150px"></li>
-            <li><img src="images/img-3.jpg" width="150px"></li>
-            <li><img src="images/img-1.jpg" width="150px"></li>
-            <li><img src="images/img-2.jpg" width="150px"></li>
-            <li><img src="images/img-3.jpg" width="150px"></li>                     
+            <li><img src="images/img-1.jpg"></li>
+            <li><img src="images/img-2.jpg"></li>
+            <li><img src="images/img-3.jpg"></li>
+            <li><img src="images/img-1.jpg"></li>
+            <li><img src="images/img-2.jpg"></li>
+            <li><img src="images/img-3.jpg"></li>
+            <li><img src="images/img-1.jpg"></li>
+            <li><img src="images/img-2.jpg"></li>
+            <li><img src="images/img-3.jpg"></li>                     
           </ul>
         </div>        
       </div>
@@ -86,7 +88,7 @@
             </a>            
           </li>
           <li>
-            <a href="#">
+            <a href="#"></a>
               <span id="quick-icon3"></span>
               <p>CONTACT</p>
             </a>            
