--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             </a>            
           </li>
           <li>
-            <a href="#"></a>
+            <a href="#">
               <span id="quick-icon3"></span>
               <p>CONTACT</p>
-            </a>            
+            </a>
           </li>
         </ul>
       </div>
